# haskell-quillfish

./: LICENSE  Main.hs  quillfish.cabal  shell.nix
src/Database/: Quillfish.hs
