name:                quillfish
version:             0.1.0.0
homepage:            https://github.com/tomjaguarpaw/haskell-quillfish
license:             BSD3
license-file:        LICENSE
author:              Tom Ellis
maintainer:          tom-2013@purelyagile.com
copyright:           Copyright 2015 Tom Ellis
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Database.Quillfish
  build-depends:       base >=4.7 && <4.8
                     , containers >=0.5 && <0.6
                     , semigroups
                     , transformers >=0.3 && <0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
